# glvk-interop

./: CMakeLists.txt  README.md
shaders/: shader.frag  shader.vert
src/: Context.cpp  Context.hpp  GLRenderer.cpp  GLRenderer.hpp  Interop.cpp  Interop.hpp  Renderer.cpp  Renderer.hpp  Utils.hpp  VKRenderer.cpp  VKRenderer.hpp  VulkanUtils.cpp  VulkanUtils.hpp  main.cpp
